# yew-2048

./: Cargo.toml  game-2048.css  index.html
src/: game_view_2048.rs  main.rs
