[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.79"
yew = "0.19.3"
log = "0.4.14"
wasm-logger = "0.2.0"
getrandom = { version = "0.2", features = ["js"] }
